--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -67,4 +67,10 @@
     <string name="waiting_message">En attente des données…</string>
 
     <string name="cant_show_files">"Impossible d'afficher les fichiers"</string>
+
+    <string name="format_txt">Format TXT</string>
+    <string name="preferences_format_export">"Format d'export par defaut"</string>
+
+    <string name="preferences_graphs">Graphiques</string>
+    <string name="preferences_export">Export</string>
 </resources>
