--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -73,4 +73,6 @@
 
     <string name="preferences_graphs">Graphiques</string>
     <string name="preferences_export">Export</string>
+
+    <string name="preferences_nb_fraction_digits_title">Nombre de chiffres après la virgule</string>
 </resources>
